--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "host",
   "version": "1.0.0",
-  "description": "",
+  "description": "app",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app",
-    "dev": "cross-env NODE_ENV=development nodemon app"
+    "start": "cross-env NODE_ENV=production node app"
   },
   "keywords": [],
   "author": "",
