--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "app",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app"
+    "start": "cross-env NODE_ENV=production nodemon app"
   },
   "keywords": [],
   "author": "",
