--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "server": "^1.0.34"
+  },
+  "engines": {
+    "node": "14.17.1",
+    "npm": "6.14.13"
   }
 }
